Fixed sidebar shadow problem. Edited "Verwaltung" Cards to a) have a uniform height and avoid jumping when hovered and b) used new colour palette

--- a/bogenliga/src/app/components/sidebar/sidebar.component.scss
+++ b/bogenliga/src/app/components/sidebar/sidebar.component.scss
@@ -37,7 +37,7 @@ $sidebar-border-style: 1px solid rgba(0, 0, 0, .125);
   -ms-overflow-style: none; // scrollbar wont be displayed on firefox
   scrollbar-width: none;
   border-radius: 0px 0px 50px 0px;
-  box-shadow: $light-gray 0px 7px 20px 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 // basic sidebar inactive css
